<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:background="@color/colorDark"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="150dp"
        android:layout_height="40dp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/selectGym_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_user"
        android:textColor="@color/colorOrange"
        android:fontFamily="@font/agencybb"
        android:textSize="18sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/logo_imageView"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"/>

    <Spinner
        android:id="@+id/selectGym_Spinner"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/selectGym_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorWhite"
        android:spinnerMode="dropdown">

    </Spinner>


    <Button
        android:id="@+id/selectGym_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/select_gym"
        android:textSize="24sp"
        android:textColor="@color/colorOrange"
        android:fontFamily="@font/agencybb"
        android:background="@color/colorTransparent"
        android:layout_below="@+id/selectGym_Spinner"
        android:layout_marginTop="50dp"/>


</RelativeLayout>